@@ -33,6 +33,7 @@
 - Fix: [#15322] Circus music doesn't play.
 - Fix: [#15377] Entrance/exit ghost doesn't work on different stations without touching them first.
 - Fix: [#15451] Guest list name filter remains after group selection.
+- Fix: [#15466] Crash when opening a dropdown with 0 rows.
 - Fix: [#15476] Crash when placing/clearing small scenery.
 - Fix: [#15487] Map animations do not work correctly when loading an exported SV6 file in vanilla RCT2.
 - Fix: [#15490] Tile inspector needlessly updates clearance height when changing surface slopes.
